$NetBSD: CHANGES-2017,v 1.3478 2017/08/29 12:07:16 wiz Exp $

Changes to the packages collection and infrastructure in 2017:

	Updated ham/fldigi to 3.23.19 [mef 2017-01-01]
	Updated cad/gtkwave to 3.3.79 [mef 2017-01-01]
	Updated devel/py-requests to 2.12.4nb1 [ryoon 2017-01-01]
	Updated archivers/xz to 5.2.3 [mef 2017-01-01]
	Updated sysutils/py-psutil to 5.0.1 [ryoon 2017-01-01]
	Updated net/aria2 to 1.30.0 [ryoon 2017-01-01]
	Updated audio/chromaprint to 1.4.2 [mef 2017-01-01]
	Updated cad/klayout to 0.24.9 [mef 2017-01-01]
	Updated textproc/xapian to 1.4.2 [schmonz 2017-01-01]
	Updated textproc/xapian-omega to 1.4.2 [schmonz 2017-01-01]
	Updated audio/flac to 1.3.2 [adam 2017-01-01]
	Updated multimedia/ffmpeg2 to 2.8.10 [adam 2017-01-01]
	Updated textproc/mdoclint to 1.44 [wiz 2017-01-01]
	Updated print/abcm2ps to 8.13.3 [wiz 2017-01-01]
	Updated devel/flex to 2.6.3 [wiz 2017-01-01]
	Updated audio/kid3 to 3.4.3 [wiz 2017-01-01]
	Updated databases/p5-DB_File to 1.840 [wiz 2017-01-01]
	Updated net/p5-Net-DNS to 1.07 [wiz 2017-01-01]
	Updated databases/p5-DBD-SQLite to 1.54 [wiz 2017-01-01]
	Updated devel/p5-Test-Simple to 1.302073 [wiz 2017-01-01]
	Updated textproc/p5-Swim to 0.1.45 [schmonz 2017-01-01]
	Updated misc/py-anki2 to 2.0.38 [wiz 2017-01-01]
	Updated devel/p5-Params-ValidationCompiler to 0.22 [wiz 2017-01-01]
	Added lang/python36 version 3.6.0 [adam 2017-01-01]
	Updated databases/slony1 to 2.2.5 [adam 2017-01-01]
	Updated textproc/py-lxml to 3.7.1 [wiz 2017-01-01]
	Updated math/py-numpy to 1.11.3 [wiz 2017-01-01]
	Updated devel/py-hypothesis to 3.6.1 [wiz 2017-01-01]
	Updated fonts/unifont to 9.0.06 [wiz 2017-01-01]
	Updated net/libfilezilla to 0.9.0 [wiz 2017-01-01]
	Updated lang/py27-html-docs to 2.7.13 [leot 2017-01-01]
	Updated net/filezilla to 3.23.0.2 [wiz 2017-01-01]
	Added lang/py36-html-docs version 3.6.0 [leot 2017-01-01]
	Updated graphics/ImageMagick to 7.0.4.1 [wiz 2017-01-01]
	Updated misc/calibre to 2.76.0 [wiz 2017-01-01]