@@ -1,124 +1,0 @@
-@comment $NetBSD: PLIST,v 1.11 2017/07/28 19:33:24 wiz Exp $
-bin/dirmngr
-bin/dirmngr-client
-bin/g13
-bin/gpg-agent
-bin/gpg-connect-agent
-bin/gpg2
-bin/gpgconf
-bin/gpgparsemail
-bin/gpgscm
-bin/gpgsm
-bin/gpgtar
-bin/gpgv2
-bin/kbxutil
-bin/watchgnupg
-info/gnupg.info
-${PLIST.ldap}libexec/dirmngr_ldap
-libexec/gpg-check-pattern
-libexec/gpg-preset-passphrase
-libexec/gpg-protect-tool
-libexec/gpg-wks-client
-libexec/scdaemon
-man/man1/dirmngr-client.1
-man/man1/gpg-agent.1
-man/man1/gpg-connect-agent.1
-man/man1/gpg-preset-passphrase.1
-man/man1/gpg-wks-client.1
-man/man1/gpg-wks-server.1
-man/man1/gpg2.1
-man/man1/gpgconf.1
-man/man1/gpgparsemail.1
-man/man1/gpgsm.1
-man/man1/gpgv2.1
-man/man1/scdaemon.1
-man/man1/symcryptrun.1
-man/man1/watchgnupg.1
-man/man7/gnupg.7
-man/man8/addgnupghome.8
-man/man8/applygnupgdefaults.8
-man/man8/dirmngr.8
-sbin/addgnupghome
-sbin/applygnupgdefaults
-sbin/g13-syshelp
-share/doc/gnupg/DCO
-share/doc/gnupg/DETAILS
-share/doc/gnupg/FAQ
-share/doc/gnupg/HACKING
-share/doc/gnupg/KEYSERVER
-share/doc/gnupg/OpenPGP
-share/doc/gnupg/README
-share/doc/gnupg/TRANSLATE
-share/doc/gnupg/examples/README
-share/doc/gnupg/examples/debug.prf
-share/doc/gnupg/examples/gpgconf.conf
-share/doc/gnupg/examples/pwpattern.list
-share/doc/gnupg/examples/scd-event
-share/doc/gnupg/examples/systemd-user/README
-share/doc/gnupg/examples/systemd-user/dirmngr.service
-share/doc/gnupg/examples/systemd-user/dirmngr.socket
-share/doc/gnupg/examples/systemd-user/gpg-agent-browser.socket
-share/doc/gnupg/examples/systemd-user/gpg-agent-extra.socket
-share/doc/gnupg/examples/systemd-user/gpg-agent-ssh.socket
-share/doc/gnupg/examples/systemd-user/gpg-agent.service
-share/doc/gnupg/examples/systemd-user/gpg-agent.socket
-share/doc/gnupg/examples/trustlist.txt
-share/doc/gnupg/examples/vsnfd.prf
-share/gnupg/distsigkey.gpg
-share/gnupg/help.be.txt
-share/gnupg/help.ca.txt
-share/gnupg/help.cs.txt
-share/gnupg/help.da.txt
-share/gnupg/help.de.txt
-share/gnupg/help.el.txt
-share/gnupg/help.eo.txt
-share/gnupg/help.es.txt
-share/gnupg/help.et.txt
-share/gnupg/help.fi.txt
-share/gnupg/help.fr.txt
-share/gnupg/help.gl.txt
-share/gnupg/help.hu.txt
-share/gnupg/help.id.txt
-share/gnupg/help.it.txt
-share/gnupg/help.ja.txt
-share/gnupg/help.nb.txt
-share/gnupg/help.pl.txt
-share/gnupg/help.pt.txt
-share/gnupg/help.pt_BR.txt
-share/gnupg/help.ro.txt
-share/gnupg/help.ru.txt
-share/gnupg/help.sk.txt
-share/gnupg/help.sv.txt
-share/gnupg/help.tr.txt
-share/gnupg/help.txt
-share/gnupg/help.zh_CN.txt
-share/gnupg/help.zh_TW.txt
-share/gnupg/sks-keyservers.netCA.pem
-share/locale/ca/LC_MESSAGES/gnupg2.mo
-share/locale/cs/LC_MESSAGES/gnupg2.mo
-share/locale/da/LC_MESSAGES/gnupg2.mo
-share/locale/de/LC_MESSAGES/gnupg2.mo
-share/locale/el/LC_MESSAGES/gnupg2.mo
-share/locale/en@boldquot/LC_MESSAGES/gnupg2.mo
-share/locale/en@quot/LC_MESSAGES/gnupg2.mo
-share/locale/eo/LC_MESSAGES/gnupg2.mo
-share/locale/es/LC_MESSAGES/gnupg2.mo
-share/locale/et/LC_MESSAGES/gnupg2.mo
-share/locale/fi/LC_MESSAGES/gnupg2.mo
-share/locale/fr/LC_MESSAGES/gnupg2.mo
-share/locale/gl/LC_MESSAGES/gnupg2.mo
-share/locale/hu/LC_MESSAGES/gnupg2.mo
-share/locale/id/LC_MESSAGES/gnupg2.mo
-share/locale/it/LC_MESSAGES/gnupg2.mo
-share/locale/ja/LC_MESSAGES/gnupg2.mo
-share/locale/nb/LC_MESSAGES/gnupg2.mo
-share/locale/pl/LC_MESSAGES/gnupg2.mo
-share/locale/pt/LC_MESSAGES/gnupg2.mo
-share/locale/ro/LC_MESSAGES/gnupg2.mo
-share/locale/ru/LC_MESSAGES/gnupg2.mo
-share/locale/sk/LC_MESSAGES/gnupg2.mo
-share/locale/sv/LC_MESSAGES/gnupg2.mo
-share/locale/tr/LC_MESSAGES/gnupg2.mo
-share/locale/uk/LC_MESSAGES/gnupg2.mo
-share/locale/zh_CN/LC_MESSAGES/gnupg2.mo
-share/locale/zh_TW/LC_MESSAGES/gnupg2.mo
