@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.20 2017/08/11 01:12:43 ryoon Exp $
-
-SHA1 (gnupg-2.1.23.tar.bz2) = c470777eaa9657ef3258068507065c9a7caef9eb
-RMD160 (gnupg-2.1.23.tar.bz2) = 622eef6554d77c2e0a2c04bd16dcebfbee2265ad
-SHA512 (gnupg-2.1.23.tar.bz2) = 8b8be0784129f5aa0ccde32a413a68c36e0e4131abe70c3eb186958c60f3df1023deb2db2db84d63ad30a3408a75c7622b430aff1a524ff28a24be511c952412
-Size (gnupg-2.1.23.tar.bz2) = 6526734 bytes
