@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.3478 2017/08/29 12:07:16 wiz Exp $
+$NetBSD: CHANGES-2017,v 1.3479 2017/08/29 12:12:54 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -4890,3 +4890,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated security/gpa to 0.9.10 [wiz 2017-08-29]
 	Updated devel/pth to 2.0.7nb5 [wiz 2017-08-29]
 	Updated security/gnupg2 to 2.2.0 [wiz 2017-08-29]
+	Removed security/gnupg21 successor security/gnupg2 [wiz 2017-08-29]
